# rust-allure

./: .gitignore  Cargo.toml  README.md
allure-macros/: Cargo.toml
allure-macros/src/: lib.rs
allure-models/: Cargo.toml
allure-models/src/: lib.rs
allure-report/: Cargo.toml
allure-report/src/: asserter.rs  helpers.rs  lib.rs  main.rs  middleware.rs  reporter.rs
allure-report/src/reporter/: mod.rs  models.rs
allure-report/tests/: integration_test.rs  integration_test_2.rs
allure-report/tests/test_server/: mod.rs
examples/: Cargo.toml
examples/tests/: integration_testsuite_hello_world.rs  integration_testsuite_shared_step.rs  integration_testsuite_steps_on_a_struct.rs
examples/tests/helpers/: common_steps.rs  mod.rs  server.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs  middleware.rs
tests/: integration_test.rs  integration_test_2.rs
tests/some/: mod.rs
