[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.78"
bytes = "1.5.0"
http = "0.2.12"
hyper = "1.2.0"
once_cell = "1.19.0"
reqwest = { version="0.11.23", features=["json"] }
reqwest-middleware = "0.2.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.111"
task-local-extensions = "0.1.4"
tokio = { version = "1.36", features = ["full", "sync"] }
tracing = { version = "0.1.40", features = [] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
macros = { path = "../macros" }
similar = "2.4.0"


[dev-dependencies]
axum = "0.7.4"
