[package]
name = "allure-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allure-models = { version = "0.1.0", path = "../allure-models" }
anyhow = "1.0.86"
async-trait = "0.1.80"
bytes = "1.6.0"
http = "1.1.0"
hyper = "1.3.1"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-middleware = { version = "0.3.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
task-local-extensions = "0.1.4"
tokio = { version = "1.38", features = ["full", "sync"] }
tracing = { version = "0.1.40", features = [] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
allure-macros = { path = "../allure-macros" }
similar = "2.5.0"
thiserror = "1.0.61"

[dev-dependencies]
axum = "0.7.5"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }