[package]
name = "allure-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"


[dev-dependencies]
axum = "0.7.5"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
allure-report = { path = "../allure-report" }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.5.0", features = ["full"] }